--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
     <script>
         // ====== 使用者資料區域 - 請修改以下內容 ======
         const profileData = {
-            name: "欒斌 教授",
-            title: "世界前2%科學家 | 教育部師鐸獎第113屆得主",
-            expertise: "電子商務、網路行銷、AI應用",
-            education: "美國威斯康辛大學麥迪遜分校工業工程博士",
-            email: "luarn@mail.ntust.edu.tw",
-            about: "欒斌博士在東海大學取得工業工程學士學位，隨後在美國威斯康辛大學麥迪遜分校獲得工業工程碩士和博士學位。2023年，他被史丹佛大學認定為世界前2%科學家之一。",
+            name: "廖婉鈞 Fiona Liao",
+            title: "台科前2%乖學生 | 榮獲幸運女神之眷顧",
+            expertise: "蒸氣運用",
+            education: "三浦工業大學畢業",
+            email: "m11301908@mail.ntust.edu.tw",
+            about: "日本騙吃騙喝後，隨後在台灣找到一份打雜的工作，至今依舊在打雜。",
             contactEmail: "luarn@mail.ntust.edu.tw",
-            phone: "886-2-2737-6754",
+            phone: "886-2-2799-1683",
             location: "研究室: T2-409<br>國立臺灣科技大學"
         };
         // ====== 使用者資料區域結束 ======
