--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             education: "三浦工業大學畢業",
             email: "m11301908@mail.ntust.edu.tw",
             about: "日本騙吃騙喝後，隨後在台灣找到一份打雜的工作，至今依舊在打雜。",
-            contactEmail: "luarn@mail.ntust.edu.tw",
+            contactEmail: "m11301908@mail.ntust.edu.tw",
             phone: "886-2-2799-1683",
             location: "研究室: T2-409<br>國立臺灣科技大學"
         };
